--- a/AboutSuzie.html
+++ b/AboutSuzie.html
@@ -8,14 +8,18 @@
       <a class="link-header" href="index.html">Main</a>
     </header>
     <main>
-      <h1>Leonov Lev</h1>
+      <h1>About Suzie</h1>
       <ul>
-        <li>I like playing games</li>
-        <li>I skateboard</li>
-        <li>I make websites</li>
+        <li>My Favourite Dog Breeds Are Pomeranians</li>
+        <li>I Don't Have A Dog</li>
+        <li>I Play Tennis</li>
+        <li>My Favourite Singer Is Sabrina Carpenter</li>
+        <li>I Love Going To Italy</li>
       </ul>
-      <img src="/uploads/2021/04/sky-1871753_1280%201_0_1618254989.png" width="830px" height="550px"/>
-      <img src="/uploads/2021/04/skateboard-309603%201_0_1618254985.png" width="830px" height="300px"/>
+      <img src="image/ponmeranian.jpg" width="550px" height="550px"/>
+      <img src="image/SABRINA AHHHHH.jpg" width="250px" height="300px"/>
+      <img src="image/tennis shadow.jpg" width="250px" height="300px"/>
+      <img src="image/italyyyyy.jpg" width="300px" height="300px"/>
     </main>
     <footer>
       <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
