--- a/AboutSuzie.html
+++ b/AboutSuzie.html
@@ -15,11 +15,13 @@
         <li>I Play Tennis</li>
         <li>My Favourite Singer Is Sabrina Carpenter</li>
         <li>I Love Going To Italy</li>
+        <li>My Favourite Girl Group Is illit</li>
       </ul>
       <img src="image/ponmeranian.jpg" width="550px" height="550px"/>
       <img src="image/SABRINA AHHHHH.jpg" width="250px" height="300px"/>
       <img src="image/tennis shadow.jpg" width="250px" height="300px"/>
       <img src="image/italyyyyy.jpg" width="300px" height="300px"/>
+      <img src="image/illit.jpg" width="550px" height="550px"
     </main>
     <footer>
       <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
