--- a/index.html
+++ b/index.html
@@ -9,20 +9,35 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>My Greatest Work</b></a>
         <a class="link-nav" href="info.html"><b>My Favourite Things About Web Development</b></a>
       </nav>  
-      <h1>Web-sites<br/> developer</h1>
-      <p>markup and styling</p>
-      <p>formatting of grid layouts</p>
-      <p>2D animations and interactive elements</p>
-      <p>multimedia on the website</p>
-      <img src="/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="550px"/>
+      <h1>Suzie's<br/>Portfolio</h1>
+      <p>Some things we have worked with:</p>
+      <div>
+        <div><img src="image/wix.webp" width="185px" height="100px"/></div>
+        
+          <div>
+        <ol>
+            <li><a href="https://leeangelaalgo.wixsite.com/bracelets">Bejeweled Site</a></li>
+            <li><a href="https://leeangelaalgo.wixsite.com/my-site-2">Food Site</a></li>
+          </ol>
+        </div>
+        <div><img src="image/figma.png" width="200px" height="100px"/></div>
+      <div>
+        <ol>
+          <li><a href="https://www.figma.com/design/vPADL3yWBWTPZIGdQ94vF6/Pasta?m=auto&t=ocxCmhvv8MU3ziMP-6">Pasta Recipes</a></li>
+            <li><a href="https://www.figma.com/design/Opa2av9XiUnpgGfkqS6qNc/hehe?m=auto&t=ocxCmhvv8MU3ziMP-6">BitMarket Customization</a></li>
+        </ol>
+      </div>
+      <div><img src="image/html.png"/></div>
+    <div>
+      <ol>
+        <li><a href="https://leeangelaalgo.wixsite.com/bracelets">Bejeweled Site</a></li>
+        <li><a href="https://leeangelaalgo.wixsite.com/my-site-2">Food Site</a></li>
+      </ol>
+    </div>
     </main>
     <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
+
     </footer>
-  </body>
 </html>
