--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="info.html"><b>My Favourite Things About Web Development</b></a>
+        <a class="link-nav" href="favourite.html"><b>My Favourite Things About Web Development</b></a>
       </nav>  
       <h1>Suzie's<br/>Portfolio</h1>
       <p>Some things we have worked with:</p>
@@ -29,11 +29,11 @@
             <li><a href="https://www.figma.com/design/Opa2av9XiUnpgGfkqS6qNc/hehe?m=auto&t=ocxCmhvv8MU3ziMP-6">BitMarket Customization</a></li>
         </ol>
       </div>
-      <div><img src="image/html.png"/></div>
+      <div><img src="image/html.png" width="200px" height="100px"/></div>
     <div>
       <ol>
-        <li><a href="https://leeangelaalgo.wixsite.com/bracelets">Bejeweled Site</a></li>
-        <li><a href="https://leeangelaalgo.wixsite.com/my-site-2">Food Site</a></li>
+        <li><a href="https://suz1e123.github.io/bitmarket/">BitMarket</a></li>
+        <li><a href="https://suz1e123.github.io/bitmarket/">Fantastic Party</a></li>
       </ol>
     </div>
     </main>
